👷 build: Update project dependencies and cleanup build.sbt
This commit removes some unused functions and updates several dependencies in build.sbt for better code maintainability. New settings definitions are added to group related functionalities, enhancing the readability. Also updated .pre-commit-config.yaml to add hooks for Gitleaks and Conventional Pre-commit. A new project icon is included for the IntelliJ project settings for better visual identification.